# cmake_minimum_required(VERSION <specify CMake version here>)
project(university C)

set(CMAKE_C_STANDARD 99)

add_executable(LinerList "data structure/linearList/LinerList.c" )
add_executable(week07Program c/week07Program.c)
add_executable(SingleLinkedList "data structure/linearList/SingleLinkedList.c")
add_executable(LinkedList "data structure/linearList/LinkedList.c")
add_executable(ArrayStack "data structure/stack/ArrayStack.c")
add_executable(LinkedStack "data structure/stack/LinkedStack.c")
add_executable(ArrayQueue "data structure/queue/ArrayQueue.c")
add_executable(LinkedQueue "data structure/queue/LinkedQueue.c")
add_executable(deleteDuplicates "data structure/exam/linkedList/deleteDuplicates.c")
add_executable(rotateRight "data structure/exam/linkedList/rotateRight.c")
add_executable(validParentheses "data structure/exam/stack/validParentheses.c")
add_executable(reverseLinkedList "data structure/exam/linkedList/reverseLinkedList.c")
add_executable(convertNumber "data structure/exam/stack/convertNumber.c")
add_executable(speciesOfTree "data structure/exam/tree/speciesOfTree.c")
add_executable(tree "data structure/tree/Tree.c")
add_executable(huffmanTree "data structure/tree/HuffmanTree.c")
add_executable(PriorityQueue "data structure/queue/PriorityQueue.c")
add_executable(test "data structure/test.c")